--- a/documentation/thesis/thesis_abstract.tex
+++ b/documentation/thesis/thesis_abstract.tex
@@ -20,8 +20,8 @@ do not provide a complete data processing pipeline from acquisition to
 analysis, and their data storage formats are not compatible with each
 other.
 
-For this use case, the MagneticReadoutProcessing library has been
-created in this work. It implements all important aspects of
+For this use case, the python based MagneticReadoutProcessing library
+has been created in this work. It implements all important aspects of
 acquisition, storage and analysis, and each intermediate step can be
 customised by the user without having to create everything from scratch,
 thus encouraging exchange between different user groups.
@@ -36,5 +36,6 @@ were characterised and tested under the same conditions for noise,
 temperature dependence and linearity. The result is that both sensors
 can only be used under certain conditions, as the noise intensity is
 higher than the specified 50 \(\mu\)T and the value ranges fluctuate too
-much as a result. It is recommended to consider analogue sensors or NMR
-probes in the future.
+much as a result. It is recommended to consider the implementation of
+additional digital sensors as well as analogue sensors or NMR probes in
+the future.
