--- a/documentation/thesis/thesis_document.tex
+++ b/documentation/thesis/thesis_document.tex
@@ -68,8 +68,8 @@ The focus of this thesis is to improve low-frequency \gls{mri}
 technology by examining the usability of magnetic field sensors for
 characterising permanent magnets used in these systems. The variability
 in the strength of permanent magnets leads to significant difficulties
-in constructing an \gls{mri} with the necessary precision for homogenous
-field generation.
+in constructing an \gls{mri} magnet with the necessary precision for
+homogenous field generation.
 
 To address this challenge, the thesis proposes the development of a
 comprehensive hardware and software framework. The hardware system aims
@@ -298,12 +298,12 @@ pioneering research \cite{OReilly2021-ep}. In 2023, de Vos, Remis
 and Webb published a summary of the design of an oint-of-care halbach
 array low-field \gls{mri} system \cite{De_Vos2023-pb}.
 
-The Halbach magnet incorporated in this system boasts a 27cm diameter, a
-\emph{B0} field strength of 50.4mT, and an impressive homogeneity of
-2400\gls{ppm} over a 20cm diameter using smaller magnets
-(\(12 x 12 x 12 mm^3\)). This exceptional homogeneity enables the
-utilization of coil-based gradients for spatial encoding, significantly
-enhancing the flexibility of image acquisition.
+The Halbach magnet incorporated in this system boasts a \emph{27cm}
+diameter, a \emph{B0} field strength of 50.4mT, and an impressive
+homogeneity of 2400\gls{ppm} over a \emph{20cm} diameter using smaller
+magnets (\(12 x 12 x 12 mm^3\)). This exceptional homogeneity enables
+the utilization of coil-based gradients for spatial encoding,
+significantly enhancing the flexibility of image acquisition.
 
 The Halbach magnet incorporated in this system boasts a \emph{27cm}
 diameter, a \emph{B0} field strength of \emph{50.4 mT}, and an
@@ -445,8 +445,8 @@ developed solution.
 Two sensors have been meticulously chosen for inclusion in the study.
 The ultimate objective is to assess whether these selected sensors align
 with the stringent criteria of achieving an accuracy level of
-1000\gls{ppm}. Furthermore, the study seeks to validate whether the
-measuring range of these sensors appropriately corresponds to the
+\emph{1000}\gls{ppm}. Furthermore, the study seeks to validate whether
+the measuring range of these sensors appropriately corresponds to the
 required field strength, ensuring their suitability for the intended
 application.
 
@@ -678,7 +678,7 @@ non-digital sensors, which require specific frameworks. The integration
 of integrated temperature sensors represents a significant enhancement
 that will later enable precise temperature compensation.
 
-The use of analog sensors is purposefully avoided, though they are
+The use of analogue sensors is purposefully avoided, though they are
 suitable for more precise measurements and extended measuring ranges.
 They are excluded because they require more carefully designed circuits
 and more complicated energy management.
@@ -828,7 +828,7 @@ to be implemented.
 \begin{lstlisting}[language={C++}, caption={CustomSensor-Class for adding new sensor hardware support}, label=lst:CustomSensorClass]
 #ifndef __CustomSensor_h__
 #define __CustomSensor_h__
-// register your custom sensor in implemented_sensors.h also
+// register custom sensor in implemented_sensors.h also
 class CustomSensor: public baseSensor
 {
 public:
@@ -2810,13 +2810,12 @@ pipeline is started and all functions that are imported here as a module
 or implemented directly can be called via the pipeline. As this is a
 short algorithm, it is inserted directly into the file.
 
-The parameter *\_readings* should later receive the imported
-measurements from the \emph{stage rawimport}
-\ref{lst:pipeline_mrp_evaluation_yaml} and the optional
-\emph{IP\_return\_count} parameter specifies the number of best
-measurements that are returned. The return parameter is a list of
-measurements containing the most similar measurements, measured by the
-smallest distance between all measurements. The distance for each
+The parameter \_readings should later receive the imported measurements
+from the \emph{stage rawimport} \ref{lst:pipeline_mrp_evaluation_yaml}
+and the optional \emph{IP\_return\_count} parameter specifies the number
+of best measurements that are returned. The return parameter is a list
+of measurements containing the most similar measurements, measured by
+the smallest distance between all measurements. The distance for each
 measurement is determined using the centre of gravity function
 \emph{CoG}, the length is then calculated from the result vector. This
 value can then be used for sorting.
@@ -3147,22 +3146,19 @@ Measuring the noise in a magnetic field sensor requires a precise
 procedure and a special measurement setup. First, the magnetic field
 sensor is placed in a quiet and static environment to minimize external
 field interference. The temperature chamber for all noise tests is set
-to \(\mu_{trev}\)=21.0\(^{\circ}\) and the sensors are placed \emph{24}
-hours before the measurement run in the final measurement configuration
-inside of the chamber.
+to \emph{\(\mu_{trev}\)=21.0\(^{\circ}\)} and the sensors are placed
+\emph{24} hours before the measurement run in the final measurement
+configuration inside of the chamber.
 
 The procedure starts with the acquisition of the baseline by operating
 the sensor without external magnetic fields. For this purpose, a sample
 size of \emph{N=10000} measured values is recorded for the baseline
-measurement.
-
-The output signal of the sensor is continuously measured and recorded.
-It is important to carry out the measurement over a sufficiently long
-period of time in order to record both short-term and long-term
-fluctuations. For this purpose, \emph{N=2000} further measured values
-are taken with a trigger and readout rate of one measurement per second.
-
-In order to quantify the noise, the \gls{sd} of the signal is
+measurement. The output signal of the sensor is continuously measured
+and recorded. It is important to carry out the measurement over a
+sufficiently long period of time in order to record both short-term and
+long-term fluctuations. For this purpose, \emph{N=2000} further measured
+values are taken with a trigger and readout rate of one measurement per
+second. In order to quantify the noise, the \gls{sd} of the signal is
 calculated. These parameters provide information about the variation of
 the signal over time and therefore about the sensor background noise.
 
@@ -3229,25 +3225,25 @@ temperature\tabularnewline
 Analysis}\label{sensor-temperature-analysis}}
 
 The temperature stability of the \emph{TLV493D} with a mean value of
-20.68\(^{\circ}\)C and a \gls{sd} of \(\sigma_{t}\)=0.53\(^{\circ}\)C
-indicates a consistent trend. This implies a constant tendency. The
-close grouping of the measured values around the mean value indicates
-good stability. The confidence interval is expected to be between
-20.15\(^{\circ}\)C and 21.21\(^{\circ}\)C, which indicates a stable and
-consistent temperature measurement. This result is more noisy compared
-to the temperature stability of the \emph{MMC5603}.
-
-Both sensors provide an offset to the measured chamber temperature
-\(\mu_{trev}\).
+\emph{20.68\(^{\circ}\)C} and a \gls{sd} of
+\emph{\(\sigma_{t}\)=0.53\(^{\circ}\)C} indicates a consistent trend.
+This implies a constant tendency. The close grouping of the measured
+values around the mean value indicates good stability. The confidence
+interval is expected to be between \emph{20.15\(^{\circ}\)C} and
+\emph{21.21\(^{\circ}\)C}, which indicates a stable and consistent
+temperature measurement. This result is more noisy compared to the
+temperature stability of the \emph{MMC5603}. Both sensors provide an
+offset to the measured chamber temperature \(\mu_{trev}\).
 
 With an additional measurement run with a different temperature setting
-of 30.0\(^{\circ}\)C, the measured temperature deviations and offsets
-remains constant.
+of \emph{30.0\(^{\circ}\)C}, the measured temperature deviations and
+offsets remains constant.
 
 The sensor internal temperature sensors of both tested sensors are
 suitable to perform an ambient temperature compensation of measured
 values and calibration of the sensor. This is considered in section
-\emph{Temperature Sensitivity} \ref{temperature-sensitivity}.
+\emph{Temperature Sensitivity}
+\ref{sensor-characterisation-temperature-sensitivity}.
 
 Though it is recommended to use a separate temperature sensor when using
 the \emph{TLV493D} or to use a suitable averaging of the temperature and
@@ -3256,12 +3252,38 @@ measured values in order to perform temperature compensation.
 \hypertarget{raw-sensor-data-analysis}{%
 \subsection{Raw Sensor Data Analysis}\label{raw-sensor-data-analysis}}
 
-In the raw data plot, as well as its mean value \(\mu_{rv}\) of both
-sensors, an offset can also be recognised, which is dependent on the
-ambient conditions. For verification, a reference measurement of the
+The noise of a sensor describes unwanted, random fluctuations or signals
+in the measured data. These are clearly recognisable in the figure ** in
+the raw data plot. The baseline determined for each sensor is shown by
+the red ** line. Here it can be seen that each sensor has a different
+mean value or baseline offset in the same environment.
+
+The noise of a sensor describes unwanted, random fluctuations or signals
+in the measured data. These are clearly recognisable in the figure
+\ref{Sensor_noise_evaluation_results_for_TLV493D_and_MMC5603NJ_with_N=2000_samples_and_no_averaging.png}
+in the raw data plot. The baseline determined for each sensor is shown
+by the red \(\mu_{rv}\) {[}\(\mu\)T{]} line. Here can be seen that each
+sensor has a different mean value or baseline offset in the same
+environment. For verification, a reference measurement of the
 environment is carried out with the calibrated \emph{Voltcraft GM70}
-Telsameter next to the sensor \gls{ic} This provides a \emph{real}
-baseline value of \(\mu_{rev}\)=-21\(\mu\)T.
+Telsameter next to the sensor \gls{ic}. This provides a reference
+baseline value of \emph{\(\mu_{rev}\)=-21.0\(\mu\)T}.
+
+The noise of the sensor is drawn around this using the blue line. For
+the \emph{TLV493D} the \gls{sd} \emph{\(\sigma_{rv}\)=172.0\(^{\mu}\)T},
+which is twice the value given by the datasheet as the noise value.
+Under the same conditions, the \emph{MMC5603NJ} undercuts the value
+specified by the manufacturer. The \gls{sd} approaches
+\emph{\(\sigma_{rv}\)=0.20\(^{\mu}\)T} and is negligible, especially
+when additional averaging is used.
+
+As the baseline was determined first for each sensor, it can be seen
+that the Another recognisable feature is Further measurement series were
+also recorded with inserted \emph{N45 12x12x12mm} magnets, so that these
+are saturated halfway through the measurement range. This allows the
+noise measurement values to be compared with a blank measurement. These
+values correspond, so it can be concluded that the noise is within the
+same range across the measuring range.
 
 \hypertarget{sensor-characterisation-linearity}{%
 \section{Sensor Characterisation:
@@ -3286,8 +3308,8 @@ This is achieved here by means of an additional linear axis installed
 above the sensor setup. A holder for an \emph{N45 12x12x12mm} magnet is
 attached to the end effector of this axis, which can thus be moved at
 different distances above the respective sensor \gls{ic}. The ambient
-temperature is set to \(\mu_{trev}\)=21.0\(^{\circ}\) in the measurement
-runs and thus corresponds to the same conditions as in the
+temperature is set to \emph{\(\mu_{trev}\)=21.0\(^{\circ}\)} in the
+measurement runs and thus corresponds to the same conditions as in the
 \emph{Background-Noise}\ref{sensor-characterisation-background-noise}
 setup.
 
@@ -3324,8 +3346,8 @@ automated process then runs as follows:
 \item
   De-energise the axis motor
 \item
-  Create measurement using \emph{MRPCli} with N=2000 data points per
-  reading
+  Create measurement using \emph{MRPCli} with \emph{N=2000} data points
+  per reading
 \item
   Export reading to filesystem with current linear axis position in
   meta-data and filename
@@ -3355,7 +3377,7 @@ determined. In order to be able to make quantifiable statements about
 the measurement results, the mean and \gls{sd} deviation of these two
 curves is determined.
 
-For both sensors, the deviation is less than 1\% over the entire
+For both sensors, the deviation is less than \emph{1\%} over the entire
 resolution. With the \emph{MMC5603NJ} this is on average only
 \emph{0.04\%}. With the \emph{TLV493D}, however, the \gls{sd} is
 \emph{3.64\%}, for which the deviations at the end in particular (with
@@ -3407,13 +3429,14 @@ from the sensors under controlled temperature conditions.
 The same procedure is used as for the \emph{Linearity}
 \ref{sensor-characterisation-linearity} measurement, except that instead
 of moving the linear axis, the temperature of the temperature chamber is
-systematically increased from 20\(^{\circ}\) to 50\(^{\circ}\). Between
-each of these temperature changes, the system is given a waiting time of
-30 minutes after reaching the target temperature.
+systematically increased from \emph{20\(^{\circ}\)} to
+\emph{50\(^{\circ}\)}. Between each of these temperature changes, the
+system is given a waiting time of 30 minutes after reaching the target
+temperature.
 
 The field of permanent magnets is very temperature-dependent and can
 lose its magnetisation at higher temperatures (typically
-\textgreater=80\(^{\circ}\) for non-high-quality type N magnets
+\emph{\textgreater=80\(^{\circ}\)} for non-high-quality type N magnets
 \cite{magna-c}). The temperature range is selected so that it is
 within a sufficient range for the application.
 
@@ -3442,9 +3465,9 @@ therefore predictable.
 The graph of the \emph{TLV493d} is significantly steeper with a gradient
 of \emph{-5.13 \(\mu\)T / \(^{\circ}\)C}, and it is also not as linear
 as the \emph{MMC5603NJ}; there are clear jumps in the gradient. However,
-the total change between the temperature regions of 175\(\mu\)T is less
-than that of the \emph{MMC5603NJ} with 70\(\mu\)T, if the total
-measurement range of the sensors is also taken into account.
+the total change between the temperature regions of \emph{175\(\mu\)T}
+is less than that of the \emph{MMC5603NJ} with \emph{70\(\mu\)T}, if the
+total measurement range of the sensors is also taken into account.
 
 In the evaluation (see figure
 \ref{Sensor_temperature_sensitivity_evaluation_results_for_TLV493D_and_MMC5603NJ.png}),
@@ -3493,10 +3516,10 @@ summary of all recorded and analysed measured values of the two
 characterised sensors \emph{TLV493D} and \emph{MMC5603NJ}. It can be
 clearly seen that these differ significantly by a factor of \emph{x10}.
 
-The \emph{TLV493D} performs seriously in the Senosr Noise measurement
-and also performs worse than specified in the data sheet (98\(\mu\)T
-instead of 175\(\mu\)T), but the large measuring range, which fulfils
-the required specifications from chapter \emph{Research Question}
+The \emph{TLV493D} performs in noise measurements worse than specified
+in the data sheet (\emph{98\(\mu\)T} instead of \emph{175\(\mu\)T}), but
+the large measuring range, which fulfils the required specifications
+from chapter \emph{Research Question}
 \ref{research-question-and-approach}, must be taken into account here,
 which is not met by the \emph{MMC5603NJ}.
 
@@ -3506,16 +3529,16 @@ measurement averaging, very precise measurement results can be achieved,
 which achieve a measurement accuracy of less than \emph{1000\gls{ppm}}.
 
 However, due to the limited measuring range of \emph{±3mT}, direct
-measurement of stronger magnets is not possible. The \emph{N45
-12x12x12mm} magnets used in the application typically have a field
-strength of around \emph{100mT} at a distance of \emph{10mm}.
+measurement of stronger magnets is not possible using the
+\emph{MMC5603NJ}. The \emph{N45 12x12x12mm} magnets used in the
+application typically have a field strength of around \emph{100mT} at a
+distance of \emph{10mm} which is more than the \emph{MMC5603NJ} can
+measure.
 
-The \emph{TLV493D}, on the other hand, is able to measure these
-directly, but does not achieve the required accuracy due to strong noise
-and steep temperature coefficients.
-
-In the following chapter, recommendations for action are defined, which
-were derived from the analysis results.
+The \emph{TLV493D}, on the other hand, is able to measure these ranges,
+but does not achieve the required accuracy due to strong noise and steep
+temperature coefficients. In the following chapter, recommendations for
+action are defined, which were derived from the analysis results.
 
 \hypertarget{recommendation-for-action}{%
 \subsection{Recommendation for Action}\label{recommendation-for-action}}
@@ -3571,16 +3594,16 @@ limited space in the Halbach ring.
 In contrast, the \emph{TLV493D} has too much noise, so that the measured
 values cannot be used directly without post-processing. With software
 calibration, it is probably possible to reduce the noise to below
-50\(\mu\)T with the \emph{TLV493D}. As a test, several further
+\emph{50\(\mu\)T} with the \emph{TLV493D}. As a test, several further
 measurement runs were carried out, which achieved results for the sensor
-noise of 71\(\mu\)T to 41\(\mu\)T when averaging \emph{100} measured
-values and \emph{1000} measured values. However, further measurement
-runs must be carried out to verify these results.
+noise of \emph{71}\(\mu\)T* to \emph{41\(\mu\)T} when averaging
+\emph{100} measured values and \emph{1000} measured values. However,
+further measurement runs must be carried out to verify these results.
 
 In general post-processing of the measurements should, include
 temperature compensation with a separate temperature sensor, especially
 in the case of changing measurement conditions (e.g.~movement of the
-sensor in the B0 field).
+sensor in the \emph{B0} field).
 
 \hypertarget{conclusion-and-discussion}{%
 \chapter{Conclusion and Discussion}\label{conclusion-and-discussion}}
